图片设置cdn地址

--- a/js/原型链.md
+++ b/js/原型链.md
@@ -1,6 +1,6 @@
 ## 原型链图解
 
-<img width = '600' height ='600' alt='原型链' src ="./image/原型链.png"/>
+<img width = '600' height ='600' alt='原型链' src ="../image/原型链.png"/>
 
 ## 原型链
 * 原型链实现原理：假如现在有一个函数M，现需要给M增加一个say方法，若是直接在M函数中进行声明this.say = say，则在构造实例的时候，都会进行copy创建一次say，这会增加内存的使用。因此可以考虑在M函数的原型prototype上增加say方法，提供给创建的实例进行使用。在实例进行调用此方法时，会通过原型一层层去进行寻找
