--- a/js/宏任务和微任务.md
+++ b/js/宏任务和微任务.md
@@ -7,16 +7,16 @@
     执行一个宏任务(先执行同步代码)(相当于去银行办理业务时的"取号操作") ===》 执行所有的微任务("办理业务") ===》 UI render ===》执行下一个宏任务……（等业务办理完（微任务执行完）之后才能办理下一个取号的人（执行下一个宏任务））
    
 
-![js单线程](./image/js单线程.png "js单线程")
+![js单线程](../image/js单线程.png "js单线程")
 
 ## 宏任务和微任务包括哪些
 * 宏任务（由宿主：node，浏览器发起）
 
-    ![宏任务](./image/宏任务.png "宏任务")
+    ![宏任务](../image/宏任务.png "宏任务")
 
 * 微任务（由js引擎发起）
 
-    ![微任务](./image/微任务.png "微任务")
+    ![微任务](../image/微任务.png "微任务")
 
 * <font color=red>执行的顺序：先同步后异步，先微任务后宏任务</font>
 
