增加宏任务和微任务的理解

--- a/js/宏任务和微任务.md
+++ b/js/宏任务和微任务.md
@@ -1,10 +1,17 @@
 ## 什么是宏任务和微任务
+    宏任务和微任务都是属于异步任务
     说到宏任务和微任务，我们就不得不提 Event Loop(事件循环) 了
     js本质是单线程，只有执行完当前任务才会执行下一个任务，其本质是：
         1、非阻塞性的任务采取同步的方式，直接在主线程的执行栈完成。
         2、阻塞性的任务都会采用异步来执行，异步的工作一般会交给其他线程完成，然后回调函数会放到事件队列中
     当主线程的任务执行完了(执行栈空了)，JS会去询问事件队列
     执行一个宏任务(先执行同步代码)(相当于去银行办理业务时的"取号操作") ===》 执行所有的微任务("办理业务") ===》 UI render ===》执行下一个宏任务……（等业务办理完（微任务执行完）之后才能办理下一个取号的人（执行下一个宏任务））
+
+## 为什么微任务比宏任务先执行
+* 主要是因为事件循环会先判断消息队列中是否有微任务；浏览器端所有的宏任务都在一个时间队列里面执行，事件循环监听着执行栈和消息队列，当执行栈为空时，从消息队列取出一个事件时，如果有微任务，先把微任务执行完，然后才开始执行事件（即宏任务）
+  1、宏任务每次只取一个
+  2、微任务执行多个
+  3、微任务会放在当前时间循环的末尾（这就导致了微任务比宏任务先执行）
    
 
 ![js单线程](../image/js单线程.png "js单线程")
