增加事件循环

--- a/js/宏任务和微任务.md
+++ b/js/宏任务和微任务.md
@@ -12,6 +12,9 @@
   1、宏任务每次只取一个
   2、微任务执行多个
   3、微任务会放在当前时间循环的末尾（这就导致了微任务比宏任务先执行）
+
+## eventLoop事件循环
+* 代码开始执行的时候，任务先进入执行栈(call back)中，如果是同步任务，则执行该任务，并输出结果，该任务出栈，执行栈开始执行下一个任务。执行栈在执行时，如果发现该任务是宏任务，那么该宏任务进入宏任务队列，如果是微任务，那么进入微任务队列，当执行栈的任务执行完，执行栈为空时，首先会来到微任务队列中，将微任务放到执行栈中执行，如果在微任务执行的过程中添加微任务，那么添加的微任务也会在本次循环中执行，即在事件循环前调用。当微任务也执行完时，事件循环判断到执行栈和微任务队列都为空，那么将循环到宏任务队列，将宏任务放入执行栈中执行，直到宏任务也执行完，代码就执行完毕
    
 
 ![js单线程](../image/js单线程.png "js单线程")
